--- a/nginx-service.yaml
+++ b/nginx-service.yaml
@@ -9,4 +9,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
+      nodePort: 30007 # You can pick a port in the range 30000-32767
   type: NodePort
